# LearnFFmpeg

./: CMakeLists.txt  main.c  testc.c  testc.h
